--- a/source_code/web.app/records.html
+++ b/source_code/web.app/records.html
@@ -10,9 +10,8 @@
         <thead>
             <tr>
                 <th>ID</th>
+                <th>Time</th>
                 <th>Name</th>
-                <th>Email</th>
-                <th>fr</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +20,6 @@
                 <td>{{ record[0] }}</td>
                 <td>{{ record[1] }}</td>
                 <td>{{ record[2] }}</td>
-                <td>{{ record[3] }}</td>
             </tr>
             {% endfor %}
         </tbody>
