added the css and changed the structure of webpage

--- a/source_code/web.app/records.html
+++ b/source_code/web.app/records.html
@@ -40,7 +40,7 @@
         .face-image {
             width: 80px;
             height: 80px;
-            border-radius: 50%;
+            border-radius: 8px; /* Adjust the border-radius to change the image frame */
             object-fit: cover;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -51,47 +51,81 @@
             align-items: center;
         }
 
-        .oval {
-            width: 80px;
-            height: 80px;
-            border: 2px solid #007bff;
-            border-radius: 50%;
-            overflow: hidden;
+        /* Your custom CSS styles here */
+
+        .pagination {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
         }
 
-        .oval img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        .pagination a {
+            color: #007bff;
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+
+        .pagination a:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        .current {
+            color: #fff;
+            background-color: #007bff;
+            padding: 5px 10px;
         }
     </style>
 </head>
 <body>
-    <h1>PostgreSQL Records</h1>
+    <h1>List of detected faces</h1>
 
     <table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
-                <th>Email</th>
+                <th>Timedate</th>
                 <th>Face Image</th>
             </tr>
         </thead>
         <tbody>
             {% for record in records %}
             <tr>
-                <td>{{ record[0] }}</td>
-                <td>{{ record[1] }}</td>
-                <td>{{ record[2] }}</td>
+                <td>{{ record['id'] }}</td>
+                <td>{{ record['name'] }}</td>
+                <td>{{ record['time'] }}</td>
                 <td class="center">
-                    <div class="oval">
-                        <img src="{{ record[3] }}" alt="Face Image" class="face-image">
+                    <div class="face-image">
+                        <img src="{{ record['image_data'] }}" alt="Face Image" class="face-image">
                     </div>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Pagination links -->
+    <div class="pagination">
+        {% if pagination.has_prev %}
+            <a href="?page=1"><i class="fas fa-angle-double-left"></i></a>
+            <a href="?page={{ pagination.prev_num }}"><i class="fas fa-angle-left"></i></a>
+        {% endif %}
+
+        {% for num in pagination.iter_pages(left_edge=2, left_current=2, right_current=2, right_edge=2) %}
+            {% if num %}
+                {% if num != pagination.page %}
+                    <a href="?page={{ num }}">{{ num }}</a>
+                {% else %}
+                    <span class="current">{{ num }}</span>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+
+        {% if pagination.has_next %}
+            <a href="?page={{ pagination.next_num }}"><i class="fas fa-angle-right"></i></a>
+            <a href="?page={{ pagination.pages }}"><i class="fas fa-angle-double-right"></i></a>
+        {% endif %}
+    </div>
 </body>
 </html>
