--- a/source_code/web.app/records.html
+++ b/source_code/web.app/records.html
@@ -104,6 +104,10 @@
             {% endfor %}
         </tbody>
     </table>
+        <!-- Log out button -->
+    <form action="{{ url_for('logout') }}" method="post" class="center">
+        <button type="submit">Log Out</button>
+    </form>
 
     <!-- Pagination links -->
     <div class="pagination">
