--- a/source_code/web.app/records.html
+++ b/source_code/web.app/records.html
@@ -100,10 +100,23 @@
                         <img src="{{ record['image_data'] }}" alt="Face Image" class="face-image">
                     </div>
                 </td>
+                {% if session['admin_user'] %}
+                <td>
+                    <!-- Edit icon link -->
+                    <a href="{{ url_for('edit_name', id=record['id']) }}"><i class="fas fa-edit"></i></a>
+
+                    <!-- Delete icon form -->
+                    <form action="{{ url_for('delete_record', id=record['id']) }}" method="post" style="display: inline-block;">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <button type="submit" onclick="return confirm('Are you sure you want to delete this record?');"><i class="fas fa-trash-alt"></i></button>
+                    </form>
+                </td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
+
         <!-- Log out button -->
     <form action="{{ url_for('logout') }}" method="post" class="center">
         <button type="submit">Log Out</button>
